[FIX] edit template for dom-elements

--- a/src/FlexTemplate/Views/Shared/_Layout.cshtml
+++ b/src/FlexTemplate/Views/Shared/_Layout.cshtml
@@ -96,10 +96,7 @@
     <script type="text/javascript" src="~/js/ajax.js"></script>
     <script type="text/javascript" src="~/js/admin.js"></script>
     <script type="text/javascript" src="~/ckeditor/ckeditor.js"></script>
-    <script type="text/javascript">CKEDITOR.inlineAll({toolbar:
-    [
-        ['Bold', 'Italic', '-', 'NumberedList', 'BulletedList', '-', 'Link', 'Unlink', '-', 'About']
-    ]});</script>
+    <script type="text/javascript" src="~/ckeditor/adapters/jquery.js"></script>
 
 <!-- JS for only submission page -->
 <script type="text/javascript" src="~/js/bootstrap3-wysihtml5.min.js"></script>
