--- a/src/FlexTemplate/Views/Home/Components/OtherCitiesPlaces/Default.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/OtherCitiesPlaces/Default.cshtml
@@ -4,11 +4,16 @@
 <section class="c-other-cities-places">
   <div class="container">
     <div class="row">
-      <span class="user-edit-icon"></span>
       <div class="col-md-8">
         <div class="section-title-02">
-          <h3>@Html.Raw(Model.Strings["TitleLabelCaption"])</h3>
-          @Html.Raw(Model.Strings["SubtitleLabelCaption"])
+          <h3>
+            <span class="user-edit-icon"></span>
+            @Html.Raw(Model.Strings["TitleLabelCaption"])
+          </h3>
+          <div class="subtitle">
+            <span class="user-edit-icon"></span>
+            @Html.Raw(Model.Strings["SubtitleLabelCaption"])
+          </div>
         </div>
       </div>
     </div>
