--- a/src/FlexTemplate/wwwroot/css/your-style.css
+++ b/src/FlexTemplate/wwwroot/css/your-style.css
@@ -10,11 +10,23 @@ Created:        24/10/2016
  * Add your style in this file
 */
 
+.section-title-02 {
+  overflow: visible;
+}
+
+.section-title-02 h3 {
+  overflow: hidden;
+}
+
+.subtitle {
+  position: relative;
+}
+
 .user-edit-icon {
-  position: absolute;
+  content: '';
+  position: absolute !important;
   top: 2px;
-  right: 2px;
-  content: "";
+  right: -25px;
   cursor: pointer;
   display: block;
   width: 20px;
@@ -26,8 +38,27 @@ Created:        24/10/2016
   z-index: 99;
 }
 
+.user-edit-icon:after,
+.user-edit-icon:before {
+  display: none;
+}
+
+.user-edit-icon.active {
+  opacity: 1;
+}
+
 .user-edit-icon:hover {
   opacity: 1;
+}
+
+.text-edit {
+  padding: 5px;
+  border: 1px solid #DB3944;
+}
+
+.text-edit:focus {
+  outline:none;
+  box-shadow: 0 0 3px -1px #DB3944;
 }
 
 .user-edit-button {
