[MOD] Страница заведений

--- a/src/FlexTemplate/Views/Home/Components/ThisPlacesFilters/Default.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/ThisPlacesFilters/Default.cshtml
@@ -1,4 +1,5 @@
-﻿<div class="col-sm-4 col-md-3">
+﻿@model FlexTemplate.ViewModels.HomeController.ThisPlacesFiltersViewModel
+<div class="col-sm-4 col-md-3">
 
     <div class="section-title-02">
         <h4><span>Filter Your Result</span></h4>
