--- a/src/FlexTemplate/Views/Home/NewPlace.cshtml
+++ b/src/FlexTemplate/Views/Home/NewPlace.cshtml
@@ -7,7 +7,7 @@
       <p>Get more eater &amp; Drinker</p>
     </div>
   </div>
-  <form method="post" action="/Home/NewPlace">
+  <form method="post" asp-controller="Home" asp-action="NewPlace" enctype="multipart/form-data">
     <div class="container pt-10 pb-30">
       <div class="breadcrumb-wrapper">
         <ol class="breadcrumb">
