[MOD] Фильтры заведений

--- a/src/FlexTemplate/Views/Home/Places.cshtml
+++ b/src/FlexTemplate/Views/Home/Places.cshtml
@@ -11,7 +11,7 @@
                 <form>
 
                     <div class="form-group location-form">
-                        <input type="text" class="form-control" placeholder="Where would you like to eat?">
+                        <input type="text" class="form-control" placeholder="@Model.Input">
                     </div>
 
                     <div class="form-group">
