--- a/src/FlexTemplate/Views/Home/Components/Search/LeftWideAnimated.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/Search/LeftWideAnimated.cshtml
@@ -32,12 +32,20 @@
 
                     <div class="form-group">
                         <select class="custom-select" id="category-type">
-                            @for (int i = 0; i < Model.CategoriesNames.Count; i++)
+                            @foreach (var category in Model.Categories)
                             {
-                                <option value="@i">@Model.CategoriesNames[i]</option>
+                                <option value="@category.Id">@category.Name</option>
                             }
                         </select>
+                    </div>
 
+                    <div class="form-group">
+                        <select class="custom-select" id="city-type">
+                            @foreach (var city in Model.Cities)
+                            {
+                                <option value="@city.Id">@city.Name</option>
+                            }
+                        </select>
                     </div>
 
                     @Html.Raw(Model.Strings["FindButtonCaption"])
