--- a/src/FlexTemplate/Views/Home/Components/ThisPlaceHeader/Default.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/ThisPlaceHeader/Default.cshtml
@@ -1,15 +1,15 @@
 ﻿@model FlexTemplate.ViewModels.HomeController.ThisPlaceHeaderViewModel
 <!-- start hero-header -->
-<div class="hero hero-detail" style="background-image: url('images/hero-header/detail-hero.jpg');">
-
+<form method="post" asp-action="Upload" asp-controller="Home" enctype="multipart/form-data">
+    <div id="file-submit" class="dropzone">
+        <input type="file">
+    </div>
+</form>
+<div class="hero hero-detail" style="background-image: url('~/Resources/Place/@Model.Place.Id/head.jpg');">
     <div class="container">
-
         <div class="hero-detail-inner">
-
             <div id="detail-content-sticky-nav-00" class="hero-detail-bottom">
-
                 <div class="GridLex-grid-bottom">
-
                     <div class="GridLex-col-8_sm-7_xs-12_xss-12">
                         <div class="detail-header">
                             <div class="detail-header-inner">
@@ -23,23 +23,19 @@
                                 </div>
                             </div>
                         </div>
+
                     </div>
-                    <div class="GridLex-col-4_sm-4_xs-12_xss-12">
-                        <div class="text-right text-left-xs">
-                            <a href="#" class="fav-like"><i class="fa fa-heart"></i></a>
-                            <div class="btn-holder mt-5">
-                                <a href="#detail-content-sticky-nav-01" class="btn btn-primary anchor-alt">See Menu Lists</a>
-                            </div>
+                        <div class="GridLex-col-4_sm-4_xs-12_xss-12">
+                            <div class="text-right text-left-xs">
+                                <a href="#" class="fav-like"><i class="fa fa-heart"></i></a>
+                             <div class="btn-holder mt-5">
+                                 <a href="#detail-content-sticky-nav-01" class="btn btn-primary anchor-alt">See Menu Lists</a>
+                             </div>
                         </div>
                     </div>
-
                 </div>
-
             </div>
-
         </div>
-
     </div>
-
 </div>
 <!-- end hero-header -->
