--- a/src/FlexTemplate/Views/Home/Components/ThisPlacePhoto/Default.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/ThisPlacePhoto/Default.cshtml
@@ -7,5 +7,12 @@
     <div id="detail-food-photo"></div>
 
     <div class="clear mb-15"></div>
-
+    
 </div>
+
+<form method="post" asp-action="Upload" asp-controller="Home" enctype="multipart/form-data">
+    <div id="file-submit" class="dropzone">
+        <input type="file">
+        <div class="dz-default dz-message"><span>Загрузити ще..</span></div>
+    </div>
+</form>
