--- a/src/FlexTemplate/Views/Home/Components/ThisPlacesList/Default.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/ThisPlacesList/Default.cshtml
@@ -57,7 +57,7 @@
 
                     <div class="GridLex-col-3_sm-3_xss-12">
                         <div class="image">
-                            <img src="@place.Photos?.FirstOrDefault()" alt="Image" />
+                            <img src="~/Resources/Places/@place.Id/head.jpg" alt="Image" />
                         </div>
                     </div>
 
