[MOD] Добавлена тестовая логинизация

--- a/src/FlexTemplate/Views/Home/Components/Suggestions/Default.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/Suggestions/Default.cshtml
@@ -1,7 +1,7 @@
 ﻿<section class="c-suggections bg-white">
   <div class="container">
     <div class="GridLex-gap-30 GridLex-gap-20-mdd">
-      <div class="GridLex-grid-noGutter-equalHeight GridLex-grid-center" contenteditable="true">
+      <div class="GridLex-grid-noGutter-equalHeight GridLex-grid-center">
         <div class="GridLex-col-6_sm-6_xs-12_xss-12">
           <div class="featured-image" style="background-image:url('images/featured-image/01.jpg');">
             <div class="content">
