[FIX] downloading image

--- a/src/FlexTemplate/Views/Home/Components/ThisPlaceHeader/Default.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/ThisPlaceHeader/Default.cshtml
@@ -2,7 +2,7 @@
 <!-- start hero-header -->
 <div class="c-this-place-header">
   <form method="post" asp-action="Upload" asp-controller="Home" enctype="multipart/form-data">
-      <div id="file-submit" class="dropzone">
+      <div id="one-download" class="dropzone">
           <input type="file">
           <div class="dz-default dz-message"><span>Змінити головну фотографію закладу</span></div>
       </div>
